@@ -1,13 +1,8 @@
-const FormState = {
-  LOADING: 'Loading',
-  READY: 'Ready',
-  SAVING: 'Saving',
-  ERROR: 'Error'
-};
-
+export {default as ApiForm} from './apiForm';
 export {default as BooleanField} from './booleanField';
 export {default as EmailField} from './emailField';
 export {default as Form} from './form';
+export {default as FormState} from './state';
 export {default as GenericField} from './genericField';
 export {default as MultipleCheckboxField} from './multipleCheckboxField';
 export {default as NumberField} from './numberField';
@@ -17,5 +12,3 @@ export {default as Select2FieldAutocomplete} from './select2FieldAutocomplete';
 export {default as Select2Field} from './select2Field';
 export {default as TextField} from './textField';
 export {default as TextareaField} from './textareaField';
-
-export {FormState};
