@@ -1,0 +1,8 @@
+const FormState = {
+  LOADING: 'Loading',
+  READY: 'Ready',
+  SAVING: 'Saving',
+  ERROR: 'Error'
+};
+
+export default FormState;
