@@ -1,28 +1,0 @@
-{% extends "sentry/bases/modal.html" %}
-
-{% load crispy_forms_tags %}
-{% load i18n %}
-
-{% block title %}{% trans "New Organization" %} | {{ block.super }}{% endblock %}
-{% block global_sidebar %}{% endblock %}
-
-{% block main %}
-  <section class="body">
-    <h2 class="m-b-1">{% trans "Create a New Organization" %}</h2>
-
-    <p>{% blocktrans %}Organizations represent the top level in your hierarchy. You'll be able to bundle a collection of teams within an organization as well as give organization-wide permissions to users.{% endblocktrans %}</p>
-
-    <form class="form-stacked" action="" method="post">
-      {% csrf_token %}
-      <fieldset style="margin-bottom: 5px">
-        {{ form|as_crispy_errors }}
-        {% for field in form %}
-            {{ field|as_crispy_field }}
-        {% endfor %}
-      </fieldset>
-      <div class="form-actions">
-        <button type="submit" class="btn btn-primary">{% trans "Create Organization" %}</button>
-      </div>
-    </form>
-  </section>
-{% endblock %}
