@@ -1,0 +1,37 @@
+// Jest Snapshot v1, https://goo.gl/fbAQLP
+
+exports[`OrganizationCreate render() renders correctly 1`] = `
+<NarryLayout>
+  <h3>
+    Create a New Organization
+  </h3>
+  <p>
+    Organizations represent the top level in your hierarchy. You'll be able to bundle a collection of teams within an organization as well as give organization-wide permissions to users.
+  </p>
+  <ApiForm
+    apiEndpoint="/organizations/"
+    apiMethod="POST"
+    className="form-stacked"
+    fields={
+      Array [
+        Object {
+          "component": [Function],
+          "label": "Organization Name",
+          "name": "name",
+          "placeholder": "e.g. My Company",
+          "required": true,
+        },
+      ]
+    }
+    footerClass="form-actions align-right"
+    initialData={
+      Object {
+        "defaultTeam": true,
+      }
+    }
+    onSubmitComplete={[Function]}
+    submitDisabled={false}
+    submitLabel="Create Organization"
+  />
+</NarryLayout>
+`;
