@@ -1,0 +1,14 @@
+import React from 'react';
+import {shallow} from 'enzyme';
+import toJson from 'enzyme-to-json';
+
+import OrganizationCreate from 'app/views/organizationCreate';
+
+describe('OrganizationCreate', function() {
+  describe('render()', function() {
+    it('renders correctly', function() {
+      let wrapper = shallow(<OrganizationCreate />);
+      expect(toJson(wrapper)).toMatchSnapshot();
+    });
+  });
+});
